# video_publisher

./: CMakeLists.txt  README.md  package.xml
ros/include/video_publisher/: video_publisher_node.h
ros/launch/: video_publisher.launch
ros/src/: video_publisher_node.cpp
