<?xml version="1.0"?>
<package>
  <name>video_publisher</name>
  <version>0.0.0</version>
  <description>Publishes videos to ros image topic</description>
  <maintainer email="santosh.thoduka@gmail.com">Santosh Thoduka</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>

</package>
